fixed title spacing

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -44,6 +44,7 @@ h5,
 h6 {
     font-weight: 600;
     font-family: $title-font;
+    margin-bottom: .2rem;
 }
 
 h1 {
